--- a/Calculator_KK/Base.lproj/Main.storyboard
+++ b/Calculator_KK/Base.lproj/Main.storyboard
@@ -91,6 +91,9 @@
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="*"/>
+                                                        <connections>
+                                                            <action selector="numberByMultiplying:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lrl-ho-hFX"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -106,10 +109,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XJN-Tq-kvK">
                                                 <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSW-Ve-Kfh">
+                                                    <button opaque="NO" tag="7" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSW-Ve-Kfh">
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="7"/>
+                                                        <connections>
+                                                            <action selector="typeNumberAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="m0p-sr-wka"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -117,10 +123,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0mN-Eg-lkc">
                                                 <rect key="frame" x="75" y="0.0" width="75" height="75"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4kq-5g-lcs">
+                                                    <button opaque="NO" tag="8" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4kq-5g-lcs">
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="8"/>
+                                                        <connections>
+                                                            <action selector="typeNumberAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kk2-ug-23b"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -128,10 +137,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Hr-07-q4z">
                                                 <rect key="frame" x="150" y="0.0" width="75" height="75"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cas-wo-cwB">
+                                                    <button opaque="NO" tag="9" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cas-wo-cwB">
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="9"/>
+                                                        <connections>
+                                                            <action selector="typeNumberAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pvB-3b-tsU"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -143,6 +155,9 @@
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="0"/>
+                                                        <connections>
+                                                            <action selector="typeNumberAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WOk-iV-4bG"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -154,6 +169,9 @@
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="-"/>
+                                                        <connections>
+                                                            <action selector="numberBySubtracting:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ckn-pU-5OH"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -183,10 +201,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XI-7Z-Xvt">
                                                 <rect key="frame" x="75" y="0.0" width="75" height="75"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRa-NW-QNo">
+                                                    <button opaque="NO" tag="5" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRa-NW-QNo">
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="5"/>
+                                                        <connections>
+                                                            <action selector="typeNumberAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wyR-2m-ONk"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -194,10 +215,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="obs-Wi-6jR">
                                                 <rect key="frame" x="150" y="0.0" width="75" height="75"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DPI-lV-wuf">
+                                                    <button opaque="NO" tag="6" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DPI-lV-wuf">
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="6"/>
+                                                        <connections>
+                                                            <action selector="typeNumberAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bj5-vi-mG1"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -205,10 +229,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PXn-6M-vcJ">
                                                 <rect key="frame" x="225" y="0.0" width="75" height="75"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2c-Ta-cFN">
+                                                    <button opaque="NO" tag="11" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2c-Ta-cFN">
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="."/>
+                                                        <connections>
+                                                            <action selector="appendDecimalPoint:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PrB-fh-ZQf"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -220,6 +247,9 @@
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="/"/>
+                                                        <connections>
+                                                            <action selector="numberByDividing:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kpY-OB-ean"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -281,6 +311,9 @@
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="+"/>
+                                                        <connections>
+                                                            <action selector="numberByAdding:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pNP-Zm-QYS"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -292,6 +325,9 @@
                                                         <rect key="frame" x="-0.5" y="0.0" width="62.5" height="75"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="="/>
+                                                        <connections>
+                                                            <action selector="numberOutput:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MaZ-Xs-daN"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -321,6 +357,7 @@
                     <connections>
                         <outlet property="addingBtn" destination="hk3-XZ-Zw6" id="PpB-4E-L4F"/>
                         <outlet property="decimalPoint" destination="T2c-Ta-cFN" id="s8d-Au-JMh"/>
+                        <outlet property="displayLabel" destination="R4j-m5-tJt" id="Llb-Ml-s6e"/>
                         <outlet property="dividingBtn" destination="6UL-0D-z1k" id="Jdc-vh-zrA"/>
                         <outlet property="memoryCleanBtn" destination="hs2-bC-ZUO" id="Rh6-Ye-erR"/>
                         <outlet property="memoryPlusBtn" destination="GF1-N3-Z1Q" id="2tk-pt-rUE"/>
@@ -343,7 +380,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="150" y="109"/>
+            <point key="canvasLocation" x="126" y="94"/>
         </scene>
     </scenes>
 </document>
